Fix overlap in wide layout when deleting listen
Instead of using negative margins, just remove the 40px of padding inside.

--- a/frontend/css/listens-page.less
+++ b/frontend/css/listens-page.less
@@ -553,8 +553,8 @@
 
     100% {
       opacity: 0;
-      height: 0px;
-      margin-top: -40px;
+      height: 0;
+      padding: 0;
       transform: scaleY(0);
       display: none;
     }
